fix logo effect on safari

--- a/src/index.css
+++ b/src/index.css
@@ -1052,6 +1052,9 @@ ul {
     .theme-btn {
       margin-left: 200px;
     }
+    #root > div > div.stickyHeader > div > div > div.header > div {
+      transform: none !important;
+    }
   }
   @media only screen and (max-width: 1200px) {
     .drop {
